# TrayPoseTracker

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
common/: utils.py
src/Dynamic/: camera_control.py  object_tracker.py  object_tracker_3d_visualizer.py  object_tracker_onblack_plane.py  object_tracker_onblack_plane_visualizer.py  rula_pose_analysis.py  tempCodeRunnerFile.py
src/Static/: kf_path_planning.py
src/Static/kalman/: kalmanfilter.py
