[project]

name = "TrayPoseTracker"

version = "0.1.0"

description = "Add your description here"

readme = "README.md"

requires-python = ">=3.10"

dependencies = [

    "av>=14.3.0",

    "carla>=0.9.15",

    "filterpy>=1.4.5",

    "matplotlib>=3.10.1",

    "numpy<2.0",

    "open3d>=0.19.0",

    "opencv-python>=4.11.0.86",

    "pandas>=2.2.3",

    "plotly>=6.0.1",

    "pybind11==2.11.0",

    "pybind11-global==2.11.0",

    "pygame>=2.6.1",

    "pynput>=1.8.1",

    "pyorbbecsdk",

    "rerun-sdk>=0.23.1",

    "scipy>=1.15.2",

    "tqdm>=4.67.1",

    "wandb>=0.19.11",

    "wheel>=0.45.1",

    "mediapipe>=0.10.0",

]
 
[tool.uv.sources]

pyorbbecsdk = { url = "https://github.com/orbbec/pyorbbecsdk/releases/download/v2.0.10/pyorbbecsdk-2.0.10-cp310-cp310-win_amd64.whl" }

 